--- a/res/layout/widget_layout.xml
+++ b/res/layout/widget_layout.xml
@@ -8,11 +8,12 @@
 	android:paddingLeft="15dip" 
 	android:paddingRight="12dip"
 	android:paddingTop="17dip" 
-	android:paddingBottom="19dip">
+	android:paddingBottom="19dip"
+	android:baselineAligned="false">
 	<LinearLayout 
 		android:orientation="vertical"
 		android:layout_height="fill_parent" 
-		android:layout_width="fill_parent"
+		android:layout_width="0dip"
 		android:layout_weight="1">
 		<TextView android:id="@+id/widgetCurrentDay"
 			android:textColor="#fff" 
