--- a/res/layout-land/main.xml
+++ b/res/layout-land/main.xml
@@ -1,26 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/root"
-	android:orientation="vertical"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:padding="5dp">
-	<Spinner
-		android:layout_width="fill_parent"
-		android:layout_height="wrap_content"
-		android:id="@+id/stationSpinner"
-		android:prompt="@string/select_station">
-	</Spinner>
-	<HorizontalScrollView
-		android:id="@+id/scrollView" 
-		android:layout_width="wrap_content" 
-		android:layout_height="fill_parent"
-		android:background="@drawable/background_land">
-		<LinearLayout 
-			android:id="@+id/scrolled" 
-			android:layout_width="wrap_content" 
-			android:layout_height="fill_parent" 
-			android:orientation="horizontal">
+<android.support.v4.widget.DrawerLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/drawerLayout"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent">
+
+	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+				  android:id="@+id/root"
+				  android:orientation="vertical"
+				  android:layout_width="fill_parent"
+				  android:layout_height="fill_parent"
+				  android:padding="5dp">
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:id="@+id/stationBar">
+			<Button
+				android:id="@+id/hamburgerButton"
+				android:layout_width="wrap_content"
+				android:layout_height="match_parent"
+				android:paddingLeft="20dp"
+				android:paddingRight="20dp"
+				android:text="☰"/>
+			<Spinner
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:id="@+id/stationSpinner"
+				android:prompt="@string/select_station">
+			</Spinner>
 		</LinearLayout>
-	</HorizontalScrollView>
-</LinearLayout>
+		<HorizontalScrollView
+			android:id="@+id/scrollView"
+			android:layout_width="wrap_content"
+			android:layout_height="fill_parent"
+			android:background="@drawable/background_land">
+			<LinearLayout
+				android:id="@+id/scrolled"
+				android:layout_width="wrap_content"
+				android:layout_height="fill_parent"
+				android:orientation="horizontal">
+			</LinearLayout>
+		</HorizontalScrollView>
+	</LinearLayout>
+	<ListView
+		android:layout_width="240dp"
+		android:layout_height="match_parent"
+		android:layout_gravity="left"
+		android:orientation="vertical"
+		android:background="#cc111111"
+		android:id="@+id/sideMenu">
+	</ListView>
+</android.support.v4.widget.DrawerLayout>
