Fix a couple of issues in the station widget: - The first column had black text. - With the API update it was using too much padding and jumping to 2 rows. - Format the code of the widget provider.

--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -7,8 +7,8 @@
 	android:orientation="horizontal"
 	android:paddingLeft="15dip" 
 	android:paddingRight="12dip"
-	android:paddingTop="17dip" 
-	android:paddingBottom="19dip"
+	android:paddingTop="8dip"
+	android:paddingBottom="8dip"
 	android:baselineAligned="false">
 	<LinearLayout 
 		android:orientation="vertical"
@@ -37,8 +37,9 @@
 		android:orientation="vertical">
 		<TextView 
 			android:text="@string/morning" 
-			android:layout_height="wrap_content" 
-			android:layout_gravity="center" 
+			android:layout_height="wrap_content"
+			android:textColor="#aaa"
+			android:layout_gravity="center"
 			android:layout_width="wrap_content"
 			android:textSize="11dip"/>
 		<ImageView android:id="@+id/widgetMorning"
